@@ -16,6 +16,10 @@
    * Write the UTC time zone specifier to all times (see #2015).
  - obspy.signal:
    * Allow singular COUNT units in evalresp (see #2003, #2011).
+   * PPSD: show a warning when trying to read a PPSD npz file that was written
+     with a newer version of the npz representation than is used by current
+     ObsPy version. For safety reasons, starting with ObsPy 1.2.0 in such cases
+     an ObsPyException will be raised (see #2051)
 
 1.1.0: (doi: 10.5281/zenodo.165135)
  - General:
